--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@ asgiref==3.9.1
 Django==5.2.5
 django-stubs==5.2.2
 django-stubs-ext==5.2.2
+iniconfig==2.1.0
 mypy==1.17.1
 mypy_extensions==1.1.0
+packaging==25.0
 pathspec==0.12.1
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==8.4.1
+pytest-django==4.11.1
 sqlparse==0.5.3
 types-PyYAML==6.0.12.20250809
 typing_extensions==4.14.1
