--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.9.1
 Django==5.2.5
 django-stubs==5.2.2
 django-stubs-ext==5.2.2
+django-widget-tweaks==1.5.0
+djangorestframework==3.16.1
 iniconfig==2.1.0
 mypy==1.17.1
 mypy_extensions==1.1.0
